statistics/statistics-ms/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: statistics-ms-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: statistics-ms.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: statistics-ms-service
                port:
                  number: 4005
